--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>xo7ic</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 
 <body>
     <div class="mainpage">
         <div class="top">
             <div class="logo">
-                <img src="images/logo.png" alt="">
+                <img src="logo.png" alt="">
             </div>
             <div class="menu">≡
                 <div class="options">
@@ -27,7 +27,7 @@
         <div class="center">
             <div class="show">
                 <div class="showimg">
-                    <img src="images/logoX.png" class="main-logo m-pa" alt="">
+                    <img src="logoX.png" class="main-logo m-pa" alt="">
                 </div>
                 <div class="occu m-pa">Web Developer</div>
                 <div class="btn m-pa" onclick="gotx()">subscribe ➵</div>
@@ -36,16 +36,16 @@
         <div class="bottom">
             <div class="b-p" id="links">
                 <a class="link" href="https://instagram.com/xo71c" target="_blank">
-                    <img src="images/instagram.png" alt="instagram">
+                    <img src="instagram.png" alt="instagram">
                 </a>
                 <a class="link" href="" target="_blank">
-                    <img src="images/facebook.png" alt="facebook">
+                    <img src="facebook.png" alt="facebook">
                 </a>
                 <a class="link" href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter">
+                    <img src="twitter.png" alt="twitter">
                 </a>
                 <a class="link" href="https://www.youtube.com/c/xo7icx" target="_blank">
-                    <img src="images/youtube.png" alt="youtube">
+                    <img src="youtube.png" alt="youtube">
                 </a>
             </div>
             <div class="b-p" id="">
